CRUD en Firebase Con Clean Achitecture

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,25 @@
-<h1><br>Arquitectura limpia funciona!!<br></h1>
+<app-navbar></app-navbar>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
 
-<app-album-card></app-album-card>
+<!-- <app-album-card></app-album-card> -->
+
+<!-- COMANDOS DE AYUDA -->
+<!-- CREAR UN SERVICIO: ng g service infraestructure/driven-adapter/<<name-service>>/<<name-service>> -->
+<!-- CREAR UN COMPONENTE: ng g c UI/view-models/<<name-component>> -->
+<!-- CREAR UN MODULO: ng g m UI/view-models/<<name-module>> -m=app --route <<name-module>> -->
+
+<!-- DEPENDENCIAS USADAS -->
+<!-- FIREBASE: npm i --save firebase @angular/fire -->
+<!-- BOOTSTRAP: ng add @ng-bootstrap/ng-bootstrap -->
+<!-- PAGINADOR: npm install ngx-pagination --save -->
+<!-- PAGINADOR: npm install ngx-pagination --save -->
+<!-- INSTALAR FIREBASE-TOOLS: sudo npm install -g firebase-tools -->
+<!-- LOGUEARSE EN FIREBASE: firebase login -->
+<!-- AGREGAR FIREBASE AL PROYECTO: ng add @angular/fire -->
+<!-- INSTALAR FIREBASE: npm install --save firebase -->
