--- a/src/app/UI/view-models/album-card/album-card.component.scss
+++ b/src/app/UI/view-models/album-card/album-card.component.scss
@@ -1,7 +1,6 @@
 body {
     background: #e2e1e0;
-    text-align: center;
-
+    // text-align: center;
   }
   
   .card {
@@ -30,6 +29,6 @@ body {
   h3{
     margin-top: 2px;
     text-transform: uppercase;
-    text-align: center;
+    // text-align: center;
     background-color: #e2e1e0;
   }
