--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 h1{
-    color: darken(#fff,10%);
+    color: darken(rgb(0, 0, 0),10%);
     font-family: "Fredoka One";
     text-transform: uppercase;
     font-size: 4em;
