--- a/src/app/UI/common/navbar/navbar.component.html
+++ b/src/app/UI/common/navbar/navbar.component.html
@@ -1,16 +1,15 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" *ngIf="user$ | async as user; else login">
     <a class="navbar-brand" href="#">E-LEARNING PLATFORM</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
     <div class="collapse navbar-collapse" id="navbarText">
         <!-- <a style="color: #fff">{{ user$ | async | json }}</a> -->
-        <ul class="navbar-nav mx-auto" *ngIf="user$ | async as user; else login">
-            <li class="nav-item active" >
+        <ul class="navbar-nav mx-auto">
+            <li class="nav-item active">
                 <a class="nav-link" routerLink="/" *ngIf="user">Home</a>
             </li>
-            <li class="nav-item active" >
+            <li class="nav-item active">
                 <a class="nav-link" routerLink="/administrar-usuarios" *ngIf="user">Administrar Usuarios</a>
             </li>
             <li class="nav-item" *ngIf="user">
@@ -20,12 +19,8 @@
                 <a class="nav-link">{{ user?.email}}</a>
             </li>
         </ul>
-        <ng-template #login>
-            <ul>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/login" style="color: #fff" >Login</a>
-                </li>
-            </ul>        
-        </ng-template>
     </div>
 </nav>
+<ng-template #login>
+    <!-- <app-home></app-home> -->
+</ng-template>
