--- a/src/app/UI/view-models/home/home.component.scss
+++ b/src/app/UI/view-models/home/home.component.scss
@@ -1,42 +1,13 @@
-.mediaViewInfo {
-    --web-view-name: v_index;
-    --web-view-id: v_index;
-    --web-scale-to-fit: true;
-    --web-scale-to-fit-type: fit;
-    --web-enable-scale-up: true;
-    --web-scale-on-resize: true;
-    --web-center-horizontally: true;
-    --web-center-vertically: true;
-    --web-enable-deep-linking: true;
-}
-
-:root {
-    --web-view-ids: v_index;
-}
-
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    border: none;
-    box-shadow: none;
 }
 
 .v_index_Class {
-    position: absolute;
-    width: -webkit-fill-available;
-    height: -webkit-fill-available;
+    width: 100%;
+    height: 90vh;
+    // background-color: red;
     background-color: rgba(255, 255, 255, 1);
-    overflow: hidden;
-    --web-view-name: v_index;
-    --web-view-id: v_index;
-    --web-scale-to-fit: true;
-    --web-scale-to-fit-type: fit;
-    --web-enable-scale-up: true;
-    --web-scale-on-resize: true;
-    --web-center-horizontally: true;
-    --web-center-vertically: true;
-    --web-enable-deep-linking: true;
 }
 
 @keyframes fadein {
@@ -49,15 +20,7 @@
 }
 
 .button_alumnos_Class {
-    position: absolute;
-    width: 266px;
-    height: 355px;
-    left: 310px;
-    top: 223px;
-    overflow: visible;
-    --web-animation: fadein 0.3s ease-out;
-    --web-action-type: page;
-    --web-action-target: v_al_login.html;
+    position: relative;
     cursor: pointer;
 }
 
@@ -99,15 +62,7 @@
 }
 
 .button_docentes_Class {
-    position: absolute;
-    width: 266px;
-    height: 355px;
-    left: 705px;
-    top: 223px;
-    overflow: visible;
-    --web-animation: fadein 0.3s ease-out;
-    --web-action-type: page;
-    --web-action-target: v_doc_login.html;
+    position: relative;
     cursor: pointer;
 }
 
