--- a/src/app/UI/view-models/cursos/cursos.component.html
+++ b/src/app/UI/view-models/cursos/cursos.component.html
@@ -9,7 +9,7 @@
             <!-- <td>{{item.id}}</td> -->
             <td>{{item.curso}}</td>
             <td>
-                <button type="button" class="btn btn-primary" routerLink="/temas">Temas</button>
+                <button type="button" class="btn btn-primary" routerLink="/administrar-temas">Temas</button>
             </td>
         </tr>
     </tbody>
