--- a/src/app/UI/view-models/login/login.component.html
+++ b/src/app/UI/view-models/login/login.component.html
@@ -1,13 +1,13 @@
-<br>
+<!-- <br>
 <div class="card">
     <div class="card-body">
         <h2>Login</h2>
-        <form [formGroup]="loginForm" (ngSubmit)="onLogin()" >
+        <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" aria-describedby="emailHelp"
-                    placeholder="Enter email" formControlName="email">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email" formControlName="email">
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                    else.</small>
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
@@ -19,5 +19,57 @@
             </div>
             <button type="submit" class="btn btn-primary">Login</button>
         </form>
+    </div>
+</div> -->
+
+<link rel="stylesheet" type="text/css" id="applicationStylesheet" href="./login.component.scss" />
+
+<div id="v_doc_login" class="v_doc_login_Class">
+    <img style="position:absolute;width:210px;height:46px;left:410px;top:670px;overflow:visible;" data-type="Rectangle" data-name="button_google" class="button_google_Class" src="./../../../../assets/button_google.png" srcset="./../../../../assets/button_google.png 1x">
+
+    <img style="position:absolute;width:210px;height:46px;left:640px;top:670px;overflow:visible;" data-type="Rectangle" data-name="button_facebook" class="button_facebook_Class" src="./../../../../assets/button_facebook.png" srcset="./../../../../assets/button_facebook.png 1x">
+
+    <div style="position:absolute;width:393px;height:602px;left:443px;top:57px;overflow:visible;" data-type="Group" data-name="div_general" class="div_general_Class">
+        <svg data-type="Rectangle" data-name="div_fondo" class="div_fondo">
+            <rect class="div_fondo_Class" rx="38" ry="38" x="0" y="0" width="393" height="523">
+            </rect>
+        </svg>
+        <div style="position:absolute;width:150px;height:205px;left:122px;top:0px;overflow:visible;" data-type="Group" data-name="Grupo 227" class="Grupo_227_Class">
+            <div data-type="Text" data-name="text_login_docente" class="text_login_docente_Class">
+                <span>LOGIN DOCENTE</span>
+            </div>
+            <img style="position:absolute;width:79px;height:151px;left:65px;top:0px;overflow:visible;" data-type="Rectangle" data-name="img_profesor" class="img_profesor_Class" src="./../../../../assets/img_profesor.png" srcset="./../../../../assets/img_profesor.png 1x">
+
+            <img style="position:absolute;width:37px;height:145px;left:28px;top:6px;overflow:visible;" data-type="Rectangle" data-name="img_profesora" class="img_profesora_Class" src="./../../../../assets/img_profesora.png" srcset="./../../../../assets/img_profesora.png 1x">
+
+        </div>
+        <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+            <div style="position:absolute;width:266px;height:270px;left:64px;top:286px;overflow:visible;" data-type="Group" data-name="input_correo" class="input_correo_Class">
+
+                <div data-type="Text" data-name="text_correo" class="text_correo_Class">
+                    <span>CORREO</span>
+                </div>
+                <div>
+                    <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email" formControlName="email" style="height: 5.5vh; margin-top: 11%; width: 100%; border-radius: 10px; padding: 3%;font-size: 15px; ">
+                </div>
+
+                <div type="submit" style="position:absolute;width:164px;height:34px;left:50px;top:236px;overflow:visible;" data-type="Group" data-name="btn_ingresar" class="btn_ingresar_Class">
+                    <!-- <div data-type="Text" data-name="text_ingresar" class="text_ingresar_Class">
+                        <span>INGRESAR</span>
+                    </div> -->
+                    <button type="submit" class="btn btn-primary text_ingresar_Class" style="width: 100%;height: 80%;">Login</button>
+                </div>
+            </div>
+            <div style="position:absolute;width:266px;height:73px;left:64px;top:385px;overflow:visible;" data-type="Group" data-name="input_contrasenia" class="input_contrasenia_Class">
+                <div data-type="Text" data-name="text_contrasenia" class="text_contrasenia_Class">
+                    <span>CONTRASEÑA</span>
+                </div>
+                <div>
+                    <input type="password" class="form-control" placeholder="Password" formControlName="password" style="height: 5.5vh; margin-top: 11%; width: 100%; border-radius: 10px; padding: 3%;font-size: 15px;">
+                </div>
+
+            </div>
+        </form>
+
     </div>
 </div>
