--- a/src/app/UI/common/navbar/navbar.component.html
+++ b/src/app/UI/common/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" *ngIf="user$ | async as user; else login">
-    <a class="navbar-brand" href="#">E-LEARNING PLATFORM</a>
+    <a class="navbar-brand" href="#" style="margin-left: 2%;">E-LEARNING PLATFORM</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    <div class="collapse navbar-collapse" id="navbarText">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText" style="margin-left: 30%;">
         <!-- <a style="color: #fff">{{ user$ | async | json }}</a> -->
         <ul class="navbar-nav mx-auto">
             <li class="nav-item active">
@@ -18,12 +18,13 @@
             <li class="nav-item" *ngIf="user">
                 <a href="#" class="nav-link" (click)="onLogout()">LogOut</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link">{{ user?.email}}</a>
-            </li>
+            </li> -->
         </ul>
     </div>
 </nav>
+
 <ng-template #login>
     <!-- <app-home></app-home> -->
 </ng-template>
