--- a/src/app/UI/view-models/administrar-temas/administrar-temas.component.html
+++ b/src/app/UI/view-models/administrar-temas/administrar-temas.component.html
@@ -16,6 +16,7 @@
             <td>
                 <button type="button" class="btn btn-primary" (click)="openEditar(content, item)">Editar</button>
                 <!-- <button type="button" class="btn btn-danger" (click)="eliminar(item)">Eliminar</button> -->
+                <button type="button" class="btn btn-info" routerLink="/administrar-sub-temas">Subtemas</button>
             </td>
         </tr>
     </tbody>
