--- a/src/app/UI/view-models/grados-academicos/grados-academicos.component.html
+++ b/src/app/UI/view-models/grados-academicos/grados-academicos.component.html
@@ -11,7 +11,7 @@
             <td>{{item.grado}}</td>
             <td>{{item.nivel}}</td>
             <td>
-                <button type="button" class="btn btn-primary" routerLink="/cursos">Cursos</button>
+                <button type="button" class="btn btn-primary" routerLink="/cursos/{{item.id}}">Cursos</button>
             </td>
         </tr>
     </tbody>
