--- a/src/app/UI/view-models/home/home.component.html
+++ b/src/app/UI/view-models/home/home.component.html
@@ -1,38 +1,86 @@
 <link rel="stylesheet" type="text/css" id="applicationStylesheet" href="./home.component.scss" />
 
 <!-- <script id="applicationScript" type="text/javascript" src="./view_inicio.js"></script> -->
+<style>
+    .card .card-header img {
+        width: 40px;
+        height: 40px;
+    }
+    
+    .card .card-header .card-title {
+        color: #575962;
+        font-size: 18px;
+        padding-top: 3px;
+    }
+    
+    .content .card {
+        margin-bottom: 30px;
+        min-width: 300px;
+        width: 60%;
+        box-shadow: 0px 1px 0px 1px rgb(103 101 109 / 8%);
+        border-radius: 6px;
+    }
+</style>
+<div class="content" *ngIf="user$ | async as user; else login">
 
-<div id="v_index" class="v_index_Class">
-    <div style="position: relative; width: 100%; top:6vh; text-align: center; padding: 20px;">
-        <a style="font-family: 'Courier New', Courier, monospace; font-size: 4vh; zoom: 2;">E-Learning Platform</a>
-    </div>
+    <br><br><br><br>
+    <article class="card">
+        <section class="card-header">
+            <img src="../../../../assets/snoop-dogg.png" class="rounded-circle" alt="Profile picture">
+            <h4 class="card-title m-2">Alexandra Daddario</h4>
+        </section>
+        <section class="card-body">
+            <h6 class="light-green-text accent-3">
+                <i class="far fa-bell"></i> Update
+            </h6>
+            <h4 class="card-title">Teacher change</h4>
+            <p class="card-text">
+                Mr. Zac Efron has left the university. Hence,
+                <span class="purple-text">Miss Alexandra Daddario</span> will be taking his place and teaching
+                <span class="purple-text">biology</span> this semester.
+            </p>
+        </section>
+        <section class="card-footer text-right">
+            <button class="btn btn-light-green accent-3" data-toggle="modal" data-target="#profileModal">View profile</button>
+        </section>
+    </article>
 
-    <div style="height: 80vh;">
+</div>
 
-        <div style="width:266px;height:355px;overflow:visible; top: 17vh; left:42vh;" data-type="Group" data-name="button_alumnos" onclick="application.goToTargetView(event)" class="button_alumnos_Class">
-            <svg data-type="Rectangle" data-name="div_alumnos" class="div_alumnos">
+<ng-template #login>
+    <!-- <app-home></app-home> -->
+    <div id="v_index" class="v_index_Class">
+        <div style="position: relative; width: 100%; top:6vh; text-align: center; padding: 20px;">
+            <a style="font-family: 'Courier New', Courier, monospace; font-size: 4vh; zoom: 2;">E-Learning Platform</a>
+        </div>
+
+        <div style="height: 80vh;">
+
+            <div style="width:266px;height:355px;overflow:visible; top: 17vh; left:42vh;" data-type="Group" data-name="button_alumnos" onclick="application.goToTargetView(event)" class="button_alumnos_Class">
+                <svg data-type="Rectangle" data-name="div_alumnos" class="div_alumnos">
 			<rect class="div_alumnos_Class" rx="38" ry="38" x="0" y="0" width="266" height="355">
 			</rect>
 		</svg>
-            <div data-type="Text" data-name="text_alumnos" class="text_alumnos_Class">
-                <span>ESTUDIANTES</span>
-            </div>
-            <img style="width:227px;height:225px;left:19px;top:58px;overflow:visible;" data-type="Rectangle" data-name="img_alumnos" class="img_alumnos_dt_Class" src="./../../../../assets/img_alumnos_dt.png" srcset="./../../../../assets/img_alumnos_dt.png 1x">
+                <div data-type="Text" data-name="text_alumnos" class="text_alumnos_Class">
+                    <span>ESTUDIANTES</span>
+                </div>
+                <img style="width:227px;height:225px;left:19px;top:58px;overflow:visible;" data-type="Rectangle" data-name="img_alumnos" class="img_alumnos_dt_Class" src="./../../../../assets/img_alumnos_dt.png" srcset="./../../../../assets/img_alumnos_dt.png 1x">
 
-        </div>
-        <div style="width:266px;height:355px;overflow:visible; top:-36vh; left:87vh;" data-type="Group" data-name="button_docentes" onclick="application.goToTargetView(event)" class="button_docentes_Class" routerLink="/login">
-            <svg data-type="Rectangle" data-name="div_docentes" class="div_docentes">
+            </div>
+            <div style="width:266px;height:355px;overflow:visible; top:-36vh; left:87vh;" data-type="Group" data-name="button_docentes" onclick="application.goToTargetView(event)" class="button_docentes_Class" routerLink="/login">
+                <svg data-type="Rectangle" data-name="div_docentes" class="div_docentes">
 			<rect class="div_docentes_Class" rx="38" ry="38" x="0" y="0" width="266" height="355">
 			</rect>
 		</svg>
-            <img style="width:143px;height:279px;left:113px;top:22px;overflow:visible;" data-type="Rectangle" data-name="img_profesor" class="img_profesor_Class" src="./../../../../assets/img_profesor.png" srcset="./../../../../assets/img_profesor.png 1x">
+                <img style="width:143px;height:279px;left:113px;top:22px;overflow:visible;" data-type="Rectangle" data-name="img_profesor" class="img_profesor_Class" src="./../../../../assets/img_profesor.png" srcset="./../../../../assets/img_profesor.png 1x">
 
-            <div data-type="Text" data-name="text_docentes" class="text_docentes_Class">
-                <span>DOCENTES</span>
+                <div data-type="Text" data-name="text_docentes" class="text_docentes_Class">
+                    <span>DOCENTES</span>
+                </div>
+                <img style="width:68px;height:270px;left:45px;top:31px;overflow:visible;" data-type="Rectangle" data-name="img_profesora" class="img_profesora_Class" src="./../../../../assets/img_profesora.png" srcset="./../../../../assets/img_profesora.png 1x">
+
             </div>
-            <img style="width:68px;height:270px;left:45px;top:31px;overflow:visible;" data-type="Rectangle" data-name="img_profesora" class="img_profesora_Class" src="./../../../../assets/img_profesora.png" srcset="./../../../../assets/img_profesora.png 1x">
-
         </div>
-    </div>
 
-</div>
+    </div>
+</ng-template>
