--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
-
+<app-sidebar></app-sidebar>
 <div class="container">
-    <div class="col-md-12">
+    <div class="col-md-12" style=" 100%;padding-left: 12%;">
         <router-outlet></router-outlet>
     </div>
 </div>
