paint views grados-academicos and cursos

--- a/src/app/UI/common/sidebar/sidebar.component.html
+++ b/src/app/UI/common/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<script>
+<!-- <script>
     $(function() {
 
         $("#sidebar .navbar-header").css("height", $("#topbar").css("height"));
@@ -65,7 +65,7 @@
             <a href="./resources.html" class="nav-link btn btn-block btn-lg">
                 <i class="fas fa-file-alt fa-lg mr-1"></i>
                 <span>Administrar usuarios</span>
-                <!-- <span class="badge badge-pill green d-flex align-items-center justify-content-center">14</span> -->
+                <span class="badge badge-pill green d-flex align-items-center justify-content-center">14</span>
             </a>
         </li>
         <li class="nav-item btn-group">
@@ -73,7 +73,7 @@
                 <i class="fas fa-graduation-cap fa-lg mr-1"></i>
                 <span>Grados</span>
             </a>
-            <!-- <ul id="marks" class="dropdown dropdown-menu">
+            <ul id="marks" class="dropdown dropdown-menu">
                 <li>
                     <a href="./grades-sem-1.html" class="nav-link dropdown-item">Semester 1</a>
                 </li>
@@ -86,7 +86,7 @@
                 <li>
                     <a href="./grades-sem-4.html" class="nav-link dropdown-item">Semester 4</a>
                 </li>
-            </ul> -->
+            </ul>
         </li>
 
         <li class="nav-item">
@@ -97,7 +97,7 @@
             </a>
         </li>
     </ul>
-</nav>
+</nav> -->
 
 <ng-template #login>
 </ng-template>
