--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,16 @@
 <app-navbar></app-navbar>
 <app-sidebar></app-sidebar>
-<div class="container">
-    <div class="col-md-12" style=" 100%;padding-left: 12%;">
+<div>
+    <!-- <div class="col-md-12" style="100%;padding-left: 12%;">
         <router-outlet></router-outlet>
-    </div>
+    </div> -->
+    <router-outlet></router-outlet>
 </div>
+<footer>
+    <p class="attribution">
+        Powered by ABC Team
+    </p>
+</footer>
 
 <!-- COMANDOS DE AYUDA -->
 <!-- CREAR UN SERVICIO: ng g service infraestructure/driven-adapter/<<name-service>>/<<name-service>> -->
