--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,3 +5,10 @@ h1{
     font-size: 4em;
     line-height: 0.7em;
 }
+.attribution {
+	font-size: 11px;
+	text-align: center;
+	a {
+		color: hsl(228, 45%, 44%);
+	}
+}
