--- a/src/app/UI/view-models/administrar-sub-temas/administrar-sub-temas.component.html
+++ b/src/app/UI/view-models/administrar-sub-temas/administrar-sub-temas.component.html
@@ -1,5 +1,5 @@
 <br>
-<!-- <button type="button" class="btn btn-success" (click)="openSave(content)">Crear nuevo Tema</button> -->
+<button type="button" class="btn btn-success" (click)="openSave(content)">Crear nuevo SubTema</button>
 <table class="table" style="text-align: center">
     
     <br>
@@ -14,10 +14,35 @@
             <!-- <td>{{item.id}}</td> -->
             <td>{{item.subtema}}</td>
             <td>
-                <!-- <button type="button" class="btn btn-primary" (click)="openEditar(content, item)">Editar</button> -->
-                <!-- <button type="button" class="btn btn-danger" (click)="eliminar(item)">Eliminar</button> -->
-                <!-- <button type="button" class="btn btn-info" routerLink="/administrar-sub-temas/{{item.id}}">Subtemas</button> -->
+                <button type="button" class="btn btn-primary" (click)="openEditar(content, item)">Editar</button>
+                <button type="button" class="btn btn-danger" (click)="eliminar(item)">Eliminar</button>
+                <button type="button" class="btn btn-info" routerLink="/administrar-preguntas/{{item.id}}">Preguntas</button>
             </td>
         </tr>
     </tbody>
 </table>
+
+<ng-template #content let-modal>
+    <div class="modal-header">
+        <h4 class="modal-title" id="modal-basic-title">Estudiante create/update</h4>
+        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <form>
+            <div class="form-group">
+                <form [formGroup]="managerForm">
+                    <div class="form-group">
+                        <label>SubTema</label>
+                        <input type="text" formControlName="subtema" class="form-control">
+                    </div>
+                </form>
+            </div>
+        </form>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-outline-dark" (click)="guardar()" *ngIf="!actualizar">Guardar</button>
+        <button type="button" class="btn btn-outline-dark" (click)="actualiza()" *ngIf="actualizar">Actualizar</button>
+    </div>
+</ng-template>
