--- a/src/app/UI/view-models/grados-academicos/grados-academicos.component.html
+++ b/src/app/UI/view-models/grados-academicos/grados-academicos.component.html
@@ -1,18 +1,41 @@
-<table class="table" style="text-align: center">
-    <thead>
-        <tr>
-            <th>Grado</th>
-            <th>Nivel</th>
-        </tr>
-    </thead>
-    <tbody *ngFor="let item of collection">
-        <tr>
-            <!-- <td>{{item.id}}</td> -->
-            <td>{{item.grado}}</td>
-            <td>{{item.nivel}}</td>
-            <td>
-                <button type="button" class="btn btn-primary" routerLink="/cursos/{{item.id}}">Cursos</button>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<div class="header">
+    <h1>Matemáticas</h1>
+    <p>¡Mejora en matemáticas con más fluidez y confianza! Con ABC Team, los estudiantes logran dominar competencias clave a
+        su propio ritmo mediante ejercicios amenos e interactivos.</p>
+</div>
+<div class="row1-container" *ngFor="let item of collection">
+    <!-- <div class="box box-down cyan">
+        <h2>Supervisor</h2>
+        <p>Monitors activity to identify project roadblocks</p>
+        <img src="https://assets.codepen.io/2301174/icon-supervisor.svg" alt="">
+    </div>
+
+    <div class="box red">
+        <h2>Team Builder</h2>
+        <p>Scans our talent network to create the optimal team for your project</p>
+        <img src="https://assets.codepen.io/2301174/icon-team-builder.svg" alt="">
+    </div>
+
+    <div class="box box-down blue">
+        <h2>Calculator</h2>
+        <p>Uses data from past projects to provide better delivery estimates</p>
+        <img src="https://assets.codepen.io/2301174/icon-calculator.svg" alt="">
+    </div> -->
+    <div class="box orange">
+        <img src="https://assets.codepen.io/2301174/icon-karma.svg" alt="">
+        <h2>Grado {{item.grado}}</h2>
+        <h3>Nivel {{item.nivel}}</h3>
+        <p>Incluye: Contar hacia delante y hacia atrás: hasta 100|Trucos de suma: sumas hasta 10|Hallar un número usando
+            sumas: sumas hasta 10|Completar la suma: sumas hasta 10</p>
+        <p class="card__apply"><a routerLink="/cursos/{{item.id}}">Ver las competencias<i class="fas fa-arrow-right"></i></a></p>
+    </div>
+</div>
+
+<!-- <div class="row">
+    <div class="col-sm-10">
+        <h3>Nivel</h3>
+    </div>
+    <div class="col-sm-2">
+        <h2>{{item.grado}}</h2>
+    </div>
+</div> -->
