styles of Teacher views ready v3

--- a/src/app/UI/view-models/administrar-temas/administrar-temas.component.html
+++ b/src/app/UI/view-models/administrar-temas/administrar-temas.component.html
@@ -18,7 +18,7 @@
                 <p class="card__apply" (click)="openEditar(content, item)"><a>Editar<i class="fas fa-arrow-right"></i></a></p>
             </div>
             <div class="col-sm-3">
-                <p class="card__apply" (click)="navigate(item.id, item.tema, type_user)"><a>Ver los subtemas<i class="fas fa-arrow-right"></i></a></p>
+                <p class="card__apply" (click)="navigate(item.id, item.tema, type_user, item.orden)"><a>Ver los subtemas<i class="fas fa-arrow-right"></i></a></p>
             </div>
             <!-- <div class="col-sm-6">
                 <button type="button" class="btn btn-danger" (click)="eliminar(item)">Eliminar</button>
