--- a/src/app/UI/view-models/responder-preguntas/responder-preguntas.component.html
+++ b/src/app/UI/view-models/responder-preguntas/responder-preguntas.component.html
@@ -1,1 +1,1 @@
-<b>Gerson, aqui te voy a enviar la lista de preguntas y el orden en el que los mostraras</b>
+<b>Gerson, aqui te voy a enviar la lista de subtemas y el orden en el que los mostraras</b>
