do corrections in administrar-subtemas

--- a/src/app/UI/view-models/administrar-preguntas/administrar-preguntas.component.html
+++ b/src/app/UI/view-models/administrar-preguntas/administrar-preguntas.component.html
@@ -24,9 +24,9 @@
             <!-- <div class="col-sm-3">
                 <p class="card__apply" routerLink="/administrar-preguntas/{{item.id}}/{{item.subtema}}"><a>Ver los subtemas<i class="fas fa-arrow-right"></i></a></p>
             </div> -->
-            <!-- <div class="col-sm-6">
+            <div class="col-sm-6">
                 <button type="button" class="btn btn-danger" (click)="eliminar(item)">Eliminar</button>
-            </div> -->
+            </div>
         </div>
     </div>
 </div>
