--- a/src/app/UI/view-models/administrar-sub-temas/administrar-sub-temas.component.html
+++ b/src/app/UI/view-models/administrar-sub-temas/administrar-sub-temas.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-    <h1>{{name_tema}}</h1>
+    <h1>Tema: {{name_tema}}</h1>
     <div class="row">
         <div class="col-sm-10">
             <p></p>
